feat(system): complete internal user management
